--- a/kube-prometheus/manifests/alertmanager-alertmanager.yaml
+++ b/kube-prometheus/manifests/alertmanager-alertmanager.yaml
@@ -6,7 +6,7 @@ metadata:
   name: main
   namespace: monitoring
 spec:
-  baseImage: quay.io/prometheus/alertmanager
+  baseImage: quay-mirror.qiniu.com/prometheus/alertmanager
   nodeSelector:
     beta.kubernetes.io/os: linux
   replicas: 3
@@ -15,4 +15,4 @@ spec:
     runAsNonRoot: true
     runAsUser: 1000
   serviceAccountName: alertmanager-main
-  version: v0.16.0
+  version: v0.16.1
