--- a/kube-prometheus/manifests/grafana-deployment.yaml
+++ b/kube-prometheus/manifests/grafana-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: grafana
     spec:
       containers:
-      - image: grafana/grafana:6.0.0-beta1
+      - image: grafana/grafana:6.0.1
         name: grafana
         ports:
         - containerPort: 3000
@@ -57,6 +57,12 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
           name: grafana-dashboard-k8s-resources-pod
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
+          name: grafana-dashboard-k8s-resources-workload
+          readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
+          name: grafana-dashboard-k8s-resources-workloads-namespace
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/nodes
           name: grafana-dashboard-nodes
           readOnly: false
@@ -77,7 +83,7 @@ spec:
       serviceAccountName: grafana
       volumes:
       # - emptyDir: {}
-      #  name: grafana-storage
+      #   name: grafana-storage
       - name: grafana-storage
         persistentVolumeClaim:
           claimName: grafana-storage
@@ -102,6 +108,12 @@ spec:
       - configMap:
           name: grafana-dashboard-k8s-resources-pod
         name: grafana-dashboard-k8s-resources-pod
+      - configMap:
+          name: grafana-dashboard-k8s-resources-workload
+        name: grafana-dashboard-k8s-resources-workload
+      - configMap:
+          name: grafana-dashboard-k8s-resources-workloads-namespace
+        name: grafana-dashboard-k8s-resources-workloads-namespace
       - configMap:
           name: grafana-dashboard-nodes
         name: grafana-dashboard-nodes
