--- a/efk/efk.yaml
+++ b/efk/efk.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: logging
+
+
+##################Elasticsearch#############################
 ---
 # elasticsearch配置文件
 apiVersion: v1
@@ -230,6 +233,8 @@ spec:
   nfs:
     path: /data/k8s-nfs/elasticsearch/data02
     server: nfs-dev.talkedu.cn
+
+##################Kibana#############################
 ---
 # kibana 配置文件
 apiVersion: v1
@@ -324,3 +329,106 @@ spec:
         backend:
           serviceName: kibana
           servicePort: 5601
+
+##################Fluentd#############################
+---
+# Fluentd Service
+apiVersion: v1
+kind: Service
+metadata:
+  name: fluentd-es
+  namespace: logging
+  labels:
+    app: fluentd-es
+spec:
+  ports:
+  - name: fluentd-tcp
+    port: 24224
+    protocol: TCP
+    targetPort: 24224
+  - name: fluentd-udp
+    port: 24224
+    protocol: UDP
+    targetPort: 24224
+  selector:
+    app: fluentd-es
+---
+# Fluentd Deployment
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: fluentd-es
+  namespace: logging
+  labels:
+    app: fluentd-es
+  annotations:
+    sidecar.istio.io/inject: "false"
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: fluentd-es
+    spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchLabels:
+                  app: "elasticsearch"
+      containers:
+      - name: fluentd-es
+        #image: gcr.io/google-containers/fluentd-elasticsearch:v2.0.1
+        image: ming19871211/fluentd-elasticsearch:v2.0.1
+        env:
+        - name: FLUENTD_ARGS
+          value: --no-supervisor -q
+        resources:
+          limits:
+            memory: 500Mi
+          requests:
+            cpu: 100m
+            memory: 200Mi
+        volumeMounts:
+        - name: config-volume
+          mountPath: /etc/fluent/config.d
+      terminationGracePeriodSeconds: 30
+      volumes:
+      - name: config-volume
+        configMap:
+          name: fluentd-es-config
+---
+# Fluentd ConfigMap，包含配置文件。
+kind: ConfigMap
+apiVersion: v1
+data:
+  forward.input.conf: |-
+    # 采用 TCP 发送的消息
+    <source>
+      type forward
+    </source>
+  output.conf: |-
+    <match **>
+       type elasticsearch
+       log_level info
+       include_tag_key true
+       host elasticsearch
+       port 9200
+       logstash_format true
+       # 设置 chunk limits.
+       buffer_chunk_limit 2M
+       buffer_queue_limit 8
+       flush_interval 5s
+       # 重试间隔绝对不要超过 5 分钟。
+       max_retry_wait 30
+       # 禁用重试次数限制（永远重试）。
+       disable_retry_limit
+       # 使用多线程。
+       num_threads 2
+    </match>
+metadata:
+  name: fluentd-es-config
+  namespace: logging
