增加内存限制

--- a/efk/prod/k8s-efk.yaml
+++ b/efk/prod/k8s-efk.yaml
@@ -155,6 +155,7 @@ spec:
         resources:
             limits:
               cpu: "1"
+              memory: 4096Mi 
             requests:
               cpu: 25m
               memory: 1536Mi            
